[package]
name = "split-secret"
version = "0.1.0"
authors = ["Charles Zinn <charles.zinn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
galois_2p8 = "0.1.2"    # Basic Arithmetic over all GF(2^8) fields
clap = { version = "4.1.10", features = ["derive"] }   # A simple to use, efficient, and full-featured Command Line Argument Parser
rand = "0.8.5"          # Random number generators and other randomness functionality.
typenum = "1.16.0"
block-modes = "0.9.1"
block-padding = { git = "https://github.com/czinn/rust-crypto-utils.git" }
cipher = { version = "0.4.4", features = ["rand_core"] }
aes = "0.8.2"
cbc = "0.1.2"
cfb-mode = "0.8.2"
